# loadfanet

./: README.md  pyproject.toml
app/: main.py  settings.py
app/serializers/: netdata_api_serializer.py
app/utils/client_netdata/: client_netdata.py
