[tool.poetry]
name = "loadfanet"
version = "0.1.0"
description = "Load get data service Netdata API"
authors = ["Vadim V"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96"
pydantic = "^1.10"
aiohttp = "^3.8.4"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
